clusters/k3s/apps/seafile/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile-db
  template:
    metadata:
      labels:
        app: seafile-db
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.11
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-data
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: seafile-mysql-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile-memcached
  template:
    metadata:
      labels:
        app: seafile-memcached
    spec:
      containers:
      - name: memcached
        image: memcached:1.6.18
        args:
          - "-m"
          - "256"
        ports:
        - containerPort: 11211
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile
  template:
    metadata:
      labels:
        app: seafile
    spec:
      enableServiceLinks: false
      containers:
      - name: seafile
        image: seafileltd/seafile-mc:11.0-latest
        ports:
        - containerPort: 80
        - containerPort: 8082
        volumeMounts:
        - mountPath: /shared
          name: seafile-data
      volumes:
      - name: seafile-data
        persistentVolumeClaim:
          claimName: seafile-data-pvc
