clusters/k3s/apps/seafile/service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: seafile-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
spec:
  selector:
    app: seafile-memcached
  ports:
    - protocol: TCP
      port: 11211
      targetPort: 11211
---
apiVersion: v1
kind: Service
metadata:
  name: seafile
spec:
  selector:
    app: seafile
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: seafhttp
      protocol: TCP
      port: 8082
      targetPort: 8082
