clusters/k3s/apps/seafile/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seafile-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: seafile.devcw.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seafile
            port:
              number: 80
  tls:
  - hosts:
    - seafile.devcw.xyz
